--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.dylib
 dist
+.DS_Store
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,3 +21,5 @@ dist
 
 # Go workspace file
 go.work
+
+dist/
