--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,12 @@
 name: goreleaser
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
     # run only against tags
     tags:
-      - "*"
+      - "v*"
 
 permissions:
   contents: write
@@ -31,6 +28,10 @@ jobs:
         with:
           go-version: stable
 
+      - name: get version
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       # More assembly might be required: Docker logins, GPG, etc.
       # It all depends on your needs.
       - name: Run GoReleaser
@@ -44,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
           # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
-          
+
       - name: Show GoReleaser version
         run: goreleaser -v
